--- a/contact.html
+++ b/contact.html
@@ -27,86 +27,40 @@
     />
   </head>
   <body>
-    <nav class="page-nav-bar orange lighten-2" role="navigation"></nav>
+    <nav class="page-nav-bar teal darken-4" role="navigation"></nav>
     <div class="section no-pad-bot" id="index-banner">
       <div class="container">
-        <br /><br />
-        <h1 class="header center orange-text">Starter Template</h1>
-        <div class="row center">
-          <h5 class="header col s12 light">
-            A modern responsive front-end framework based on Material Design
-          </h5>
+        <div>
+          <h4 class="center-align teal-text">Contact Us</h4>
         </div>
-        <div class="row center">
-          <a
-            href="http://materializecss.com/getting-started.html"
-            id="download-button"
-            class="btn-large waves-effect waves-light orange"
-            >Get Started</a
-          >
+        <br />
+        <div class="section center-align">
+          <div class="center-align">
+            <img
+              src="./content/landmark.png"
+              alt=""
+              srcset=""
+              height="200"
+            /><br />
+            <address style="text-align: center">
+              Omkara Transport Private Limited<br />
+              660, Sanjay Enclave,<br />
+              Opp. G.T.K Depot, GT Karnal Road,<br />
+              Delhi-110033, India
+            </address>
+          </div>
         </div>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3498.5924319305122!2d77.15662001508483!3d28.731723882378727!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d01980d8ff33f%3A0x4038d0344fb2ed09!2sOmkara%20Transport%20Head%20Office!5e0!3m2!1sen!2sin!4v1595814117914!5m2!1sen!2sin"
+          frameborder="0"
+          style="height: 400px; width: 100%"
+        ></iframe>
         <br /><br />
+        <br />
       </div>
     </div>
 
-    <div class="container">
-      <div class="section">
-        <!--   Icon Section   -->
-        <div class="row">
-          <div class="col s12 m4">
-            <div class="icon-block">
-              <h2 class="center light-blue-text">
-                <i class="material-icons">flash_on</i>
-              </h2>
-              <h5 class="center">Speeds up development</h5>
-
-              <p class="light">
-                We did most of the heavy lifting for you to provide a default
-                stylings that incorporate our custom components. Additionally,
-                we refined animations and transitions to provide a smoother
-                experience for developers.
-              </p>
-            </div>
-          </div>
-
-          <div class="col s12 m4">
-            <div class="icon-block">
-              <h2 class="center light-blue-text">
-                <i class="material-icons">group</i>
-              </h2>
-              <h5 class="center">User Experience Focused</h5>
-
-              <p class="light">
-                By utilizing elements and principles of Material Design, we were
-                able to create a framework that incorporates components and
-                animations that provide more feedback to users. Additionally, a
-                single underlying responsive system across all platforms allow
-                for a more unified user experience.
-              </p>
-            </div>
-          </div>
-
-          <div class="col s12 m4">
-            <div class="icon-block">
-              <h2 class="center light-blue-text">
-                <i class="material-icons">settings</i>
-              </h2>
-              <h5 class="center">Easy to work with</h5>
-
-              <p class="light">
-                We have provided detailed documentation as well as specific code
-                examples to help new users get started. We are also always open
-                to feedback and can answer any questions a user may have about
-                Materialize.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <br /><br />
-    </div>
-
-    <footer class="page-footer orange"></footer>
+    <footer class="page-footer teal darken-1"></footer>
 
     <!--  Scripts-->
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
