--- a/services.html
+++ b/services.html
@@ -27,7 +27,7 @@
     />
   </head>
   <body>
-    <nav class="page-nav-bar orange lighten-2" role="navigation"></nav>
+    <nav class="page-nav-bar teal darken-4" role="navigation"></nav>
     <div class="section no-pad-bot" id="index-banner">
       <div class="container">
         <br /><br />
@@ -106,7 +106,7 @@
       <br /><br />
     </div>
 
-    <footer class="page-footer orange"></footer>
+    <footer class="page-footer teal darken-1"></footer>
 
     <!--  Scripts-->
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
