--- a/contact.html
+++ b/contact.html
@@ -35,21 +35,47 @@
         </div>
         <br />
         <div class="section center-align">
-          <div class="center-align">
-            <img
-              src="./content/landmark.png"
-              alt=""
-              srcset=""
-              height="200"
-            /><br />
-            <address style="text-align: center">
-              Omkara Transport Private Limited<br />
-              660, Sanjay Enclave,<br />
-              Opp. G.T.K Depot, GT Karnal Road,<br />
-              Delhi-110033, India
-            </address>
+          <div class="row">
+            <div class="col s12 m4">
+              <img
+                src="./content/map.png"
+                alt=""
+                srcset=""
+                height="200"
+              /><br />
+              <address style="text-align: center">
+                Omkara Transport Private Limited<br />
+                660, Sanjay Enclave,<br />
+                Opp. G.T.K Depot, GT Karnal Road,<br />
+                Delhi-110033, India
+              </address>
+            </div>
+            <div class="col s12 m4">
+              <a href="tel:+91-9350154841">
+                <img
+                  src="./content/phone.png"
+                  alt=""
+                  srcset=""
+                  height="200"
+                /><br /><br />
+                +91-9350154841</a
+              >
+            </div>
+            <div class="col s12 m4">
+              <a href="mailTo:md@omkaratransport.com">
+                <img
+                  src="./content/email.png"
+                  alt=""
+                  srcset=""
+                  height="200"
+                /><br />
+                <br />
+                md@omkaratransport.com</a
+              >
+            </div>
           </div>
         </div>
+        <br /><br />
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3498.5924319305122!2d77.15662001508483!3d28.731723882378727!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d01980d8ff33f%3A0x4038d0344fb2ed09!2sOmkara%20Transport%20Head%20Office!5e0!3m2!1sen!2sin!4v1595814117914!5m2!1sen!2sin"
           frameborder="0"
