index.html update

--- a/index.html
+++ b/index.html
@@ -28,24 +28,9 @@
   </head>
   <body>
     <nav class="page-nav-bar teal darken-4" role="navigation"></nav>
-    <div class="section no-pad-bot" id="index-banner">
-      <div class="container">
-        <br /><br />
-        <h1 class="header center orange-text">Starter Template</h1>
-        <div class="row center">
-          <h5 class="header col s12 light">
-            A modern responsive front-end framework based on Material Design
-          </h5>
-        </div>
-        <div class="row center">
-          <a
-            href="http://materializecss.com/getting-started.html"
-            id="download-button"
-            class="btn-large waves-effect waves-light orange"
-            >Get Started</a
-          >
-        </div>
-        <br /><br />
+    <div class="" id="index-banner">
+      <div class="parallax-container">
+        <div class="parallax"><img src="./content/banner1.jpg" /></div>
       </div>
     </div>
 
@@ -105,6 +90,14 @@
       </div>
       <br /><br />
     </div>
+
+    <div class="" id="index-banner">
+      <div class="parallax-container">
+        <div class="parallax"><img src="./content/banner2.jpg" /></div>
+      </div>
+    </div>
+
+    <div class="container"></div>
 
     <footer class="page-footer teal darken-1"></footer>
 
