--- a/contact.html
+++ b/contact.html
@@ -42,6 +42,7 @@
                 alt=""
                 srcset=""
                 height="200"
+                class="responsive-img"
               /><br />
               <address style="text-align: center">
                 Omkara Transport Private Limited<br />
@@ -57,6 +58,7 @@
                   alt=""
                   srcset=""
                   height="200"
+                  class="responsive-img"
                 /><br /><br />
                 +91-9350154841</a
               >
@@ -68,6 +70,7 @@
                   alt=""
                   srcset=""
                   height="200"
+                  class="responsive-img"
                 /><br />
                 <br />
                 md@omkaratransport.com</a
