--- a/services.html
+++ b/services.html
@@ -35,62 +35,149 @@
         </div>
       </div>
     </div>
+    <br /><br />
+    <div class="container">
+      <div class="section">
+        <!--   Icon Section   -->
+        <div class="row">
+          <div class="col s12 m6">
+            <div class="icon-block">
+              <p class="light">
+                <img
+                  src="./content/factory.png"
+                  alt=""
+                  srcset=""
+                  class="responsive-img"
+                />
+              </p>
+            </div>
+          </div>
+
+          <div class="col s12 m6">
+            <div class="icon-block">
+              <h5 class="center">Transportation Service</h5>
+
+              <div class="light flow-text">
+                Omkara Transport is one of the largest transporter of truckload
+                freight between the nine States of India. With offices
+                throughout north, south, western India, Omkara Transport is
+                focused on providing the finest transportation service between
+                different states of India. We have developed the advanced
+                computer systems in the industry, the skilled group of driver
+                professionals and have highly-trained and dedicated personnel.
+                We are determined to provide the best possible service to our
+                customers, enhance the environment for our employees and
+                strengthen our shareholder values. Today, we run over 200 small
+                utility vehicles and 600 trucks. With the experience and
+                expertise of more than 500 professionals we provide the
+                comprehensive transportation and logistics services that bring
+                together thousands of suppliers, plants and customers every day
+                throughout India.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <br /><br />
+    </div>
 
     <div class="container">
       <div class="section">
         <!--   Icon Section   -->
         <div class="row">
-          <div class="col s12 m4">
+          <div class="col s12 m6">
             <div class="icon-block">
-              <h2 class="center light-blue-text">
-                <i class="material-icons">flash_on</i>
-              </h2>
-              <h5 class="center">Speeds up development</h5>
-
-              <p class="light">
-                We did most of the heavy lifting for you to provide a default
-                stylings that incorporate our custom components. Additionally,
-                we refined animations and transitions to provide a smoother
-                experience for developers.
-              </p>
+              <h5 class="center">Supply Chain Management Service</h5>
+              <div class="light flow-text">
+                When the demands of your supply chain require a depth of
+                knowledge and a level of customization beyond our standard
+                Transportation services, Omkara Transport's Logistics Management
+                experts are here to help. Our professionals invest the time and
+                care necessary to gain a comprehensive understanding of your
+                overall warehousing and distribution needs. We never stop
+                advising, optimizing, and searching for new efficiencies, even
+                after putting your solution in motion. . The accountability,
+                competence and ease that come with having Omkara Transport as
+                your single, dedicated logistics partner allow you to focus on
+                your main business priorities.
+              </div>
             </div>
           </div>
-
-          <div class="col s12 m4">
+          <div class="col s12 m6">
             <div class="icon-block">
-              <h2 class="center light-blue-text">
-                <i class="material-icons">group</i>
-              </h2>
-              <h5 class="center">User Experience Focused</h5>
-
               <p class="light">
-                By utilizing elements and principles of Material Design, we were
-                able to create a framework that incorporates components and
-                animations that provide more feedback to users. Additionally, a
-                single underlying responsive system across all platforms allow
-                for a more unified user experience.
-              </p>
-            </div>
-          </div>
-
-          <div class="col s12 m4">
-            <div class="icon-block">
-              <h2 class="center light-blue-text">
-                <i class="material-icons">settings</i>
-              </h2>
-              <h5 class="center">Easy to work with</h5>
-
-              <p class="light">
-                We have provided detailed documentation as well as specific code
-                examples to help new users get started. We are also always open
-                to feedback and can answer any questions a user may have about
-                Materialize.
+                <img
+                  src="./content/supply-chain.png"
+                  alt=""
+                  srcset=""
+                  class="responsive-img"
+                />
               </p>
             </div>
           </div>
         </div>
       </div>
       <br /><br />
+    </div>
+
+    <div class="container">
+      <div class="section">
+        <!--   Icon Section   -->
+        <div class="row">
+          <div class="col s12 m6">
+            <div class="icon-block">
+              <p class="light">
+                <img
+                  src="./content/other-services.png"
+                  alt=""
+                  srcset=""
+                  class="responsive-img"
+                />
+              </p>
+            </div>
+          </div>
+          <div class="col s12 m6">
+            <div class="icon-block">
+              <h5 class="center">Other Services</h5>
+              <div class="light flow-text">
+                Prominent & Leading Service Provider from Delhi, we offer Parcel
+                Service, Transportation Service, Supply Chain Management
+                Service, Heavy Lift, over dimensional Consignments and Project
+                Handling.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <br /><br />
+    </div>
+
+    <div class="container">
+      <h5 class="center-align teal-text">Area of Services</h5>
+      <br /><br />
+      <div class="row">
+        <div class="col s12 m4 center-align">
+          <b>Starting Location</b><br />
+          <ul>
+            <li>BHIWANDI</li>
+            <li>VAPI</li>
+          </ul>
+        </div>
+        <div class="col s12 m4 center-align">
+          <b>Destination</b><br />
+          <ul>
+            <li>GURGOAN</li>
+            <li>FARIDABAD</li>
+            <li>CHANDIGARH</li>
+          </ul>
+        </div>
+        <div class="col s12 m4 center-align">
+          <b>Service Charges</b><br />
+          <ul>
+            <ll>5.00 Rs per k.g.</ll>
+          </ul>
+        </div>
+      </div>
     </div>
 
     <footer class="page-footer teal darken-1"></footer>
