services and about us

--- a/about.html
+++ b/about.html
@@ -35,7 +35,77 @@
         </div>
       </div>
     </div>
-
+    <br /><br />
+    <div class="" id="index-banner">
+      <div class="parallax-container">
+        <div class="parallax"><img src="./content/banner1.jpg" /></div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col s12 m4">
+          <h5>
+            Omkara Transport Private Limited is a Private incorporated on 18
+            April 2000.
+          </h5>
+          <div class="light flow-text">
+            Omkara Transport Private Limited's Annual General Meeting (AGM) was
+            last held on 30 September 2019. As per records from Ministry of
+            Corporate Affairs (MCA), its balance sheet was last filed on 31
+            March 2019.. Directors of Omkara Transport Private Limited are Om
+            Prakash Jangid and Gori Shankar Jangid.
+          </div>
+        </div>
+        <div class="col s12 m4">
+          <img
+            src="./content/man.png"
+            alt=""
+            class="responsive-img"
+            style="max-width: 300px"
+          />
+        </div>
+        <div class="col s12 m4">
+          <h5>
+            Omkara Transport Private Limited's Annual General Meeting (AGM) was
+            last held on 30 September 2019.
+          </h5>
+          <div class="light flow-text">
+            As per records from Ministry of Corporate Affairs (MCA), its balance
+            sheet was last filed on 31 March 2019.. Directors of Omkara
+            Transport Private Limited are Om Prakash Jangid and Gori Shankar
+            Jangid.
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="" id="index-banner">
+      <div class="parallax-container">
+        <div class="parallax"><img src="./content/banner2.jpg" /></div>
+      </div>
+    </div>
+    <br /><br />
+    <div class="container">
+      <div class="row">
+        <div class="col s12 m6">
+          <h5>we run over 200 small utility vehicles and 600 trucks</h5>
+          <div class="light flow-text">
+            When the demands of your supply chain require a depth of knowledge
+            and a level of customization beyond our standard Transportation
+            services, Omkara Transport's Logistics Management experts are here
+            to help.When the demands of your supply chain require a depth of
+            knowledge and a level of customization beyond our standard
+            Transportation services, Omkara Transport's Logistics Management
+            experts are here to help.When the demands of your supply chain
+            require a depth of knowledge and a level of customization beyond our
+            standard Transportation services, Omkara Transport's Logistics
+            Management experts are here to help
+          </div>
+        </div>
+        <div class="col s12 m6">
+          <img src="./content/fleet.jpg" alt="" class="responsive-img" />
+        </div>
+      </div>
+    </div>
     <footer class="page-footer teal darken-1"></footer>
 
     <!--  Scripts-->
