--- a/services.html
+++ b/services.html
@@ -36,6 +36,11 @@
       </div>
     </div>
     <br /><br />
+    <div class="" id="index-banner">
+      <div class="parallax-container">
+        <div class="parallax"><img src="./content/banner2.jpg" /></div>
+      </div>
+    </div>
     <div class="container">
       <div class="section">
         <!--   Icon Section   -->
