--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,14 @@
         <div>
           <h4 class="center-align teal-text">Contact Us</h4>
         </div>
-        <br />
+        <br /><br />
+      </div>
+      <div class="" id="index-banner">
+        <div class="parallax-container">
+          <div class="parallax"><img src="./content/banner2.jpg" /></div>
+        </div>
+      </div>
+      <div class="container">
         <div class="section center-align">
           <div class="row">
             <div class="col s12 m4">
@@ -41,8 +48,7 @@
                 src="./content/map.png"
                 alt=""
                 srcset=""
-                height="200"
-                class="responsive-img"
+                height="100"
               /><br />
               <address style="text-align: center">
                 Omkara Transport Private Limited<br />
@@ -57,8 +63,7 @@
                   src="./content/phone.png"
                   alt=""
                   srcset=""
-                  height="200"
-                  class="responsive-img"
+                  height="100"
                 /><br /><br />
                 +91-9350154841</a
               >
@@ -69,8 +74,7 @@
                   src="./content/email.png"
                   alt=""
                   srcset=""
-                  height="200"
-                  class="responsive-img"
+                  height="100"
                 /><br />
                 <br />
                 md@omkaratransport.com</a
