--- a/index.html
+++ b/index.html
@@ -91,6 +91,130 @@
       <br /><br />
     </div>
 
+    <div class="container">
+      <h5 class="center-align">Our Focus</h5>
+      <br />
+      <section>
+        <div class="container py-5">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="main-timeline">
+                <div class="timeline">
+                  <div class="timeline-content">
+                    <div class="circle">
+                      <span class="homebox">
+                        <img
+                          src="./content/engineering.jpg"
+                          class="img img-resp"
+                        />
+                      </span>
+                    </div>
+                    <div class="content">
+                      <span class="year">1</span>
+                      <h3 class="title h4">Engineering</h3>
+                      <p class="description">
+                        Omkara Transport is one of the largest transporter of
+                        truckload freight between the nine States of India. With
+                        offices throughout north, south, western India, Omkara
+                        Transport is focused on providing the finest
+                        transportation service between different states of
+                        India.
+                        <br />
+                        We have developed the advanced computer systems in the
+                        industry, the skilled group of driver professionals and
+                        have highly-trained and dedicated personnel.
+                      </p>
+                      <div class="icon"><span></span></div>
+                    </div>
+                  </div>
+                </div>
+                <div class="timeline">
+                  <div class="timeline-content">
+                    <div class="circle">
+                      <span class="homebox"
+                        ><img
+                          src="./content/assignments.jpg"
+                          class="img img-resp"
+                      /></span>
+                    </div>
+                    <div class="content">
+                      <span class="year">2</span>
+                      <h3 class="title h4">Assignments</h3>
+                      <p class="description">
+                        We are determined to provide the best possible service
+                        to our customers, enhance the environment for our
+                        employees and strengthen our shareholder values.
+                        <br />
+                        Today, we run over 200 small utility vehicles and 600
+                        trucks. With the experience and expertise of more than
+                        500 professionals we provide the comprehensive
+                        transportation and logistics services that bring
+                        together thousands of suppliers, plants and customers
+                        every day throughout India.
+                      </p>
+                      <div class="icon"><span></span></div>
+                    </div>
+                  </div>
+                </div>
+                <div class="timeline">
+                  <div class="timeline-content">
+                    <div class="circle">
+                      <span class="homebox"
+                        ><img
+                          src="./content/petrochemicals.jpg"
+                          class="img img-resp"
+                      /></span>
+                    </div>
+                    <div class="content">
+                      <span class="year">3</span>
+                      <h3 class="title h4">Petro Chemicals</h3>
+                      <p class="description">
+                        When the demands of your supply chain require a depth of
+                        knowledge and a level of customization beyond our
+                        standard Transportation services
+                        <br />
+                        Omkara Transport's Logistics Management experts are here
+                        to help. Our professionals invest the time and care
+                        necessary to gain a comprehensive understanding of your
+                        overall warehousing and distribution needs.
+                      </p>
+                      <div class="icon"><span></span></div>
+                    </div>
+                  </div>
+                </div>
+                <div class="timeline">
+                  <div class="timeline-content">
+                    <div class="circle">
+                      <span class="homebox"
+                        ><img
+                          src="./content/steel-plants.jpg"
+                          class="img img-resp"
+                      /></span>
+                    </div>
+                    <div class="content">
+                      <span class="year">4</span>
+                      <h3 class="title h4">Steel Plants</h3>
+                      <p class="description">
+                        We never stop advising, optimizing, and searching for
+                        new efficiencies, even after putting your solution in
+                        motion.
+                        <br />
+                        The accountability, competence and ease that come with
+                        having Omkara Transport as your single, dedicated
+                        logistics partner allow you to focus on your main
+                        business priorities.
+                      </p>
+                      <div class="icon"><span></span></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+
     <div class="" id="index-banner">
       <div class="parallax-container">
         <div class="parallax"><img src="./content/banner2.jpg" /></div>
