gallery and home page

--- a/gallery.html
+++ b/gallery.html
@@ -35,6 +35,38 @@
         </div>
       </div>
     </div>
+    <br /><br />
+    <div class="" id="index-banner">
+      <div class="parallax-container">
+        <div class="parallax"><img src="./content/banner2.jpg" /></div>
+      </div>
+    </div>
+    <br /><br />
+    <div class="container">
+      <div class="row">
+        <div class="col s12 m4">
+          <img
+            src="./content/oMAKARA-1copy.jpg"
+            alt=""
+            class="responsive-img"
+          />
+        </div>
+        <div class="col s12 m4">
+          <img
+            src="./content/oMAKARA-copy-1.jpg"
+            alt=""
+            class="responsive-img"
+          />
+        </div>
+        <div class="col s12 m4">
+          <img
+            src="./content/oMAKARA-copy-2.jpg"
+            alt=""
+            class="responsive-img"
+          />
+        </div>
+      </div>
+    </div>
 
     <footer class="page-footer teal darken-1"></footer>
 
