--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
     </div>
 
     <div class="container">
+      <h4 class="center-align teal-text">
+        Welcome to Omkara Transport Pvt. Ltd.
+      </h4>
+    </div>
+    <br /><br />
+    <div class="container">
       <div class="section">
         <!--   Icon Section   -->
         <div class="row">
@@ -43,14 +49,9 @@
               <h2 class="center light-blue-text">
                 <i class="material-icons">flash_on</i>
               </h2>
-              <h5 class="center">Speeds up development</h5>
+              <h5 class="center">Fast Delivery</h5>
 
-              <p class="light">
-                We did most of the heavy lifting for you to provide a default
-                stylings that incorporate our custom components. Additionally,
-                we refined animations and transitions to provide a smoother
-                experience for developers.
-              </p>
+              <p class="light">We provide fastest devliery.</p>
             </div>
           </div>
 
@@ -59,14 +60,11 @@
               <h2 class="center light-blue-text">
                 <i class="material-icons">group</i>
               </h2>
-              <h5 class="center">User Experience Focused</h5>
+              <h5 class="center">Client Focused</h5>
 
               <p class="light">
-                By utilizing elements and principles of Material Design, we were
-                able to create a framework that incorporates components and
-                animations that provide more feedback to users. Additionally, a
-                single underlying responsive system across all platforms allow
-                for a more unified user experience.
+                We are completely commited to provide best services to our
+                clients.
               </p>
             </div>
           </div>
@@ -76,21 +74,18 @@
               <h2 class="center light-blue-text">
                 <i class="material-icons">settings</i>
               </h2>
-              <h5 class="center">Easy to work with</h5>
+              <h5 class="center">Heavy Lift</h5>
 
-              <p class="light">
-                We have provided detailed documentation as well as specific code
-                examples to help new users get started. We are also always open
-                to feedback and can answer any questions a user may have about
-                Materialize.
-              </p>
+              <p class="light">We proide heavy lifting services.</p>
             </div>
           </div>
         </div>
       </div>
       <br /><br />
     </div>
-
+    <div class="container center-align">
+      <img src="./content/Truck.gif" alt="" class="responsive-img" />
+    </div>
     <div class="container">
       <h5 class="center-align">Our Focus</h5>
       <br />
