--- a/offices.html
+++ b/offices.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1.0"
     />
-    <title>Omkara - Gallery</title>
+    <title>Omkara - Our Offices</title>
 
     <!-- CSS  -->
     <link
@@ -31,7 +31,7 @@
     <div class="section no-pad-bot" id="index-banner">
       <div class="container">
         <div>
-          <h4 class="center-align teal-text">Gallery</h4>
+          <h4 class="center-align teal-text">Our Offices</h4>
         </div>
       </div>
     </div>
@@ -41,30 +41,28 @@
         <div class="parallax"><img src="./content/banner2.jpg" /></div>
       </div>
     </div>
-    <br /><br />
+
     <div class="container">
+      <h5 class="center-align"></h5>
       <div class="row">
+          <div class="col s12 m4"></div>
         <div class="col s12 m4">
-          <img
-            src="./content/oMAKARA-1copy.jpg"
-            alt=""
-            class="responsive-img"
-          />
+          <div class="card blue-grey darken-1">
+            <div class="card-content white-text">
+              <span class="card-title">Headquater</span>
+              <p>
+                <b>Omkara Transport P Ltd</b><br/>
+                The Professional Carriers with Personal Care<br/>
+              <address>Head Office:-660,Sanjay Enclave<br>
+                Opp.G.T.K.Depot.G.T.Karnal Road, Delhi-33<br/>
+                Ph.[91-11] 27639241,27639341,27630041,27634841,27633841<br/>
+                Website: <a href="#" target="_blank">www.omkaratransport.com</a><br/>
+                Email: <a href="mailTo:accounts@omkaratransport.com">accounts@omkaratransport.com</a></address>
+              </p>
+            </div>
+          </div>
         </div>
-        <div class="col s12 m4">
-          <img
-            src="./content/oMAKARA-copy-1.jpg"
-            alt=""
-            class="responsive-img"
-          />
-        </div>
-        <div class="col s12 m4">
-          <img
-            src="./content/oMAKARA-copy-2.jpg"
-            alt=""
-            class="responsive-img"
-          />
-        </div>
+        <div class="col s12 m4"></div>
       </div>
     </div>
 
