--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1.0"
     />
-    <title>OmXPS - Our Services</title>
+    <title>Omkara - Our Services</title>
 
     <!-- CSS  -->
     <link
