--- a/offices.html
+++ b/offices.html
@@ -41,9 +41,8 @@
         <div class="parallax"><img src="./content/banner2.jpg" /></div>
       </div>
     </div>
-
+<br><br>
     <div class="container">
-      <h5 class="center-align"></h5>
       <div class="row">
           <div class="col s12 m4"></div>
         <div class="col s12 m4">
@@ -64,6 +63,88 @@
         </div>
         <div class="col s12 m4"></div>
       </div>
+    </div>
+
+    <div class="container">
+        
+        <div class="row">
+            <div class="col s12 m6">
+              <div class="card blue-grey darken-1">
+                <div class="card-content white-text">
+                  <span class="card-title">Mumbai</span>
+                  <p>105, Sterling Chamber, Pune Street,<br>
+                    MUMBAI-400009<br>
+                    Contact Person: MR. ASHOK<br>
+                    Ph.022-41228651,40028641 F-022-23748845,9321697083
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col s12 m6">
+                <div class="card blue-grey darken-1">
+                  <div class="card-content white-text">
+                    <span class="card-title">Gurgaon</span>
+                    <p>Naharpur Road, Near Anaj Mandi Chowk,<br>
+                        Gurgaon-122001  (H.R.)<br>
+                        Contact Person: MR. GAURI SHANKAR/MR. SHARMA<br>
+                        9312403872, 9350584403                        
+                    </p>
+                  </div>
+                </div>
+              </div>
+          </div>
+          <div class="row">
+            <div class="col s12 m6">
+              <div class="card blue-grey darken-1">
+                <div class="card-content white-text">
+                    <span class="card-title">Faridabad</span>
+                    <p>17/6, Mathura Road, Sarpanch Colony,<br>
+                        Faridabad -121001  (H.R.)<br>
+                        Contact Person: MR. SATVEER SINGH<br>
+                        MO.NO. 9588045418,9610650005                        
+                    </p>
+                  </div>
+              </div>
+            </div>
+            <div class="col s12 m6">
+                <div class="card blue-grey darken-1">
+                  <div class="card-content white-text">
+                    <span class="card-title">Chandigarh</span>
+                    <p>Plot No.5, Secor-26, Transport Area,<br> 
+                        Chandigarh-160026 <br>
+                        Contact Person: MR. SANTOSH<br>
+                        Mob.-9356606683,  01724606683
+                    </p>
+                  </div>
+                </div>
+              </div>
+          </div>
+          <div class="row">
+            <div class="col s12 m6">
+              <div class="card blue-grey darken-1">
+                <div class="card-content white-text">
+                    <span class="card-title">Gandhidham</span>
+                    <p>FLAT NO.-105, Vrindavan complex, Near B.M.C.B., SEC.-9A, PLOT NO.20 <br>
+                        Gandhidham- KUTCH-370201 <br>
+                        Contact Person: MR. KISHAN SINGH <br>
+                        MOB- 9924874841, 9377154841                                              
+                    </p>
+                  </div>
+              </div>
+            </div>
+            <div class="col s12 m6">
+                <div class="card blue-grey darken-1">
+                  <div class="card-content white-text">
+                    <span class="card-title">Chandigarh</span>
+                    <p>MIG-495, Awas Vikas, opp.Himshikher property <br>
+                        Rudrapur, Udhamsingh Nagar-263153  (U.K.) <br>
+                        Contact Person: Trilok Singh <br>
+                        Mob. 9358865110, 9634153841, 05944-240025                        
+                    </p>
+                  </div>
+                </div>
+              </div>
+          </div>
     </div>
 
     <footer class="page-footer teal darken-1"></footer>
