--- a/offices.html
+++ b/offices.html
@@ -41,7 +41,7 @@
         <div class="parallax"><img src="./content/banner2.jpg" /></div>
       </div>
     </div>
-<br><br>
+    <br/><br/>
     <div class="container">
       <div class="row">
           <div class="col s12 m4"></div>
@@ -135,11 +135,87 @@
             <div class="col s12 m6">
                 <div class="card blue-grey darken-1">
                   <div class="card-content white-text">
-                    <span class="card-title">Chandigarh</span>
+                    <span class="card-title">Pant Nagar</span>
                     <p>MIG-495, Awas Vikas, opp.Himshikher property <br>
                         Rudrapur, Udhamsingh Nagar-263153  (U.K.) <br>
                         Contact Person: Trilok Singh <br>
                         Mob. 9358865110, 9634153841, 05944-240025                        
+                    </p>
+                  </div>
+                </div>
+              </div>
+          </div>
+          <div class="row">
+            <div class="col s12 m6">
+              <div class="card blue-grey darken-1">
+                <div class="card-content white-text">
+                    <span class="card-title">Vapi</span>
+                    <p>165/98, GIDC Vapi Opp. Way to Dadra Paper Mill,
+                        VAPI - 396195 (GUJRAT)
+                        Contact Person: MR.RAMESH <br>
+                        MOB. 9377926191                                              
+                    </p>
+                  </div>
+              </div>
+            </div>
+            <div class="col s12 m6">
+                <div class="card blue-grey darken-1">
+                  <div class="card-content white-text">
+                    <span class="card-title">Pune</span>
+                    <p>7A, Vineet Residency, Sec-24, Plot N.90, Pradhi Karan <br>
+                        Nigdi, Pune-410044,  MR. SUBHASH <br>
+                        09371014573,9326653781,82                                               
+                    </p>
+                  </div>
+                </div>
+              </div>
+          </div>
+          <div class="row">
+            <div class="col s12 m6">
+              <div class="card blue-grey darken-1">
+                <div class="card-content white-text">
+                    <span class="card-title">Bhiwandi</span>
+                    <p>BGTA Compound, Anjur Phata, Bhiwandi <br>
+                        Contact Person: MR NARESH <br>
+                        TEL 02522-271993,9320253841                                                                    
+                    </p>
+                  </div>
+              </div>
+            </div>
+            <div class="col s12 m6">
+                <div class="card blue-grey darken-1">
+                  <div class="card-content white-text">
+                    <span class="card-title">Delhi</span>
+                    <p>AG-468, Sanjay gandhi transport nagar <br>
+                        DELHI 110042, <br>
+                        PH.9311610041                                                                      
+                    </p>
+                  </div>
+                </div>
+              </div>
+          </div>
+          <div class="row">
+            <div class="col s12 m6">
+              <div class="card blue-grey darken-1">
+                <div class="card-content white-text">
+                    <span class="card-title">Ankleshwar</span>
+                    <p>Plot No.432, Asian Paint Chowkdi, <br>
+                        Near New Deep Chemicals, GIDC <br>
+                        Ankleshwar- 393002, <br> 
+                        Contact Person: KAILASH JANGID <br>
+                        TEL-02646-321797, 220276, 09426740247 , 09376011451                                                                                          
+                    </p>
+                  </div>
+              </div>
+            </div>
+            <div class="col s12 m6">
+                <div class="card blue-grey darken-1">
+                  <div class="card-content white-text">
+                    <span class="card-title">Ahmedabad</span>
+                    <p>603, P.B.Paekh Tower <br>
+                        opp.Vanjay Bhawan,Kakankria, Ahmedabad-22 <br>
+                        Mr.Ramesh Sharma <br>
+                        Ph-09426328041, 09228801900, 079-25466923                                                                                            
                     </p>
                   </div>
                 </div>
