--- a/offices.html
+++ b/offices.html
@@ -221,6 +221,131 @@
                 </div>
               </div>
           </div>
+          <div class="row">
+            <div class="col s12 m6">
+              <div class="card blue-grey darken-1">
+                <div class="card-content white-text">
+                    <span class="card-title">Baroda</span>
+                    <p>46 Dhanlyxmi Complex,Harmi Road, <br> 
+                        Baroda [GUJ] <br>
+                        Contact Person: Dr.D.V.Sharma <br>
+                        Ph -09824569824,0265-2481131
+                        9377281139                                                                                                                 
+                    </p>
+                  </div>
+              </div>
+            </div>
+            <div class="col s12 m6">
+                <div class="card blue-grey darken-1">
+                  <div class="card-content white-text">
+                    <span class="card-title">Jaipur</span>
+                    <p>B-237 E, VKIA ROAD NO. 5, NEAR MANGALA SARIYA, <br>
+                        JAIPUR - 302013 <br>
+                        Contact Person: Shriram Jangid <br>
+                        Mo. No. +918503009241                                                                                                                  
+                    </p>
+                  </div>
+                </div>
+              </div>
+          </div>
+          <div class="row">
+            <div class="col s12 m6">
+              <div class="card blue-grey darken-1">
+                <div class="card-content white-text">
+                    <span class="card-title">Bangalore</span>
+                    <p>No.124,Kudregere main road Madanayakanahalli <br>
+                        Madavara post.near Harish Compound, Bangalore-23 <br>
+                        Contact Person: Satyabir Sharma <br>
+                        Ph- 09342743841,09379480136, 080-32432422                                                                                                                                      
+                    </p>
+                  </div>
+              </div>
+            </div>
+            <div class="col s12 m6">
+                <div class="card blue-grey darken-1">
+                  <div class="card-content white-text">
+                    <span class="card-title">Sikar</span>
+                    <p>Opp.Despencery no.2, Devipura Road, <br>
+                        Sikar [RAJ] <br>
+                        Contact Person: Prithviraj Jangid <br>
+                        Ph- 09352310041                                                                                                                                        
+                    </p>
+                  </div>
+                </div>
+              </div>
+          </div>
+          <div class="row">
+            <div class="col s12 m6">
+              <div class="card blue-grey darken-1">
+                <div class="card-content white-text">
+                    <span class="card-title">Haridwar</span>
+                    <p>Bariar No.06 , Bhadrabad, <br>
+                        Haridwar [Uttrakhand] <br>
+                        Mo.09634153841                                                                                                                                                            
+                    </p>
+                  </div>
+              </div>
+            </div>
+            <div class="col s12 m6">
+                <div class="card blue-grey darken-1">
+                  <div class="card-content white-text">
+                    <span class="card-title">Jharkhand</span>
+                    <p>Room no.16, Transport nagar, Dimna Chowk, Mngo 
+                        Jamsedpur-831018 [Jharkhand] <br>
+                        Contact Person: Shivkumar Agrawal <br>
+                        Ph- 09204783995,09334643995,08407000105                                                                                                                                                             
+                    </p>
+                  </div>
+                </div>
+              </div>
+          </div>
+          <div class="row">
+            <div class="col s12 m6">
+              <div class="card blue-grey darken-1">
+                <div class="card-content white-text">
+                    <span class="card-title">Bhiwadi</span>
+                    <p>Shree Ganesh Complex, 1st floor, Office No.2 <br>
+                        Near MLP High School, Maheshwari, <br>
+                        Distt. Rewari(R.J) <br>
+                        COntact Person: Vijay Vashist <br>
+                        Ph- 9813384646                                                                                                                                                                             
+                    </p>
+                  </div>
+              </div>
+            </div>
+            <div class="col s12 m6">
+                <div class="card blue-grey darken-1">
+                  <div class="card-content white-text">
+                    <span class="card-title">Baddi</span>
+                    <p>Near Sangam Hotel, <br>
+                        Sai Road, <br> 
+                        Baddi(H.P)
+                        Ph- 9882236683
+                    </p>
+                  </div>
+                </div>
+              </div>
+          </div>
+          <div class="row">
+            <div class="col s12 m6">
+              <div class="card blue-grey darken-1">
+                <div class="card-content white-text">
+                    <span class="card-title">Chennai</span>
+                    <p>Rajesh Sharma: 9361571421, 9367627197                                                                                                                                                                            
+                    </p>
+                  </div>
+              </div>
+            </div>
+            <div class="col s12 m6">
+                <div class="card blue-grey darken-1">
+                  <div class="card-content white-text">
+                    <span class="card-title">Hyderabad</span>
+                    <p>Contact Number: 9396272128
+                    </p>
+                  </div>
+                </div>
+              </div>
+          </div>
     </div>
 
     <footer class="page-footer teal darken-1"></footer>
