--- a/offices.html
+++ b/offices.html
@@ -52,7 +52,7 @@
               <p>
                 <b>Omkara Transport P Ltd</b><br/>
                 The Professional Carriers with Personal Care<br/>
-              <address>Head Office:-660,Sanjay Enclave<br>
+              <address>Head Office:-660,Sanjay Enclave<br />
                 Opp.G.T.K.Depot.G.T.Karnal Road, Delhi-33<br/>
                 Ph.[91-11] 27639241,27639341,27630041,27634841,27633841<br/>
                 Website: <a href="#" target="_blank">www.omkaratransport.com</a><br/>
@@ -72,10 +72,10 @@
               <div class="card blue-grey darken-1">
                 <div class="card-content white-text">
                   <span class="card-title">Mumbai</span>
-                  <p>105, Sterling Chamber, Pune Street,<br>
-                    MUMBAI-400009<br>
-                    Contact Person: MR. ASHOK<br>
-                    Ph.022-41228651,40028641 F-022-23748845,9321697083
+                  <p>105, Sterling Chamber, Pune Street,<br />
+                    MUMBAI-400009<br />
+                    Contact Person: ASHOK<br />
+                    Ph- 022-41228651,40028641 F-022-23748845,9321697083
                   </p>
                 </div>
               </div>
@@ -84,10 +84,10 @@
                 <div class="card blue-grey darken-1">
                   <div class="card-content white-text">
                     <span class="card-title">Gurgaon</span>
-                    <p>Naharpur Road, Near Anaj Mandi Chowk,<br>
-                        Gurgaon-122001  (H.R.)<br>
-                        Contact Person: MR. GAURI SHANKAR/MR. SHARMA<br>
-                        9312403872, 9350584403                        
+                    <p>Naharpur Road, Near Anaj Mandi Chowk,<br />
+                        Gurgaon-122001  (H.R.)<br />
+                        Contact Person: GAURI SHANKAR JANGID<br />
+                        Ph- 9312403872, 9350584403                        
                     </p>
                   </div>
                 </div>
@@ -98,10 +98,10 @@
               <div class="card blue-grey darken-1">
                 <div class="card-content white-text">
                     <span class="card-title">Faridabad</span>
-                    <p>17/6, Mathura Road, Sarpanch Colony,<br>
-                        Faridabad -121001  (H.R.)<br>
-                        Contact Person: MR. SATVEER SINGH<br>
-                        MO.NO. 9588045418,9610650005                        
+                    <p>17/6, Mathura Road, Sarpanch Colony,<br />
+                        Faridabad -121001  (H.R.)<br />
+                        Contact Person: SATVEER SINGH<br />
+                        Ph- 9588045418,9610650005                        
                     </p>
                   </div>
               </div>
@@ -110,10 +110,10 @@
                 <div class="card blue-grey darken-1">
                   <div class="card-content white-text">
                     <span class="card-title">Chandigarh</span>
-                    <p>Plot No.5, Secor-26, Transport Area,<br> 
-                        Chandigarh-160026 <br>
-                        Contact Person: MR. SANTOSH<br>
-                        Mob.-9356606683,  01724606683
+                    <p>Plot No.5, Secor-26, Transport Area,<br /> 
+                        Chandigarh-160026 <br />
+                        Contact Person: SANTOSH<br />
+                        Ph- 9356606683,  01724606683
                     </p>
                   </div>
                 </div>
@@ -124,10 +124,10 @@
               <div class="card blue-grey darken-1">
                 <div class="card-content white-text">
                     <span class="card-title">Gandhidham</span>
-                    <p>FLAT NO.-105, Vrindavan complex, Near B.M.C.B., SEC.-9A, PLOT NO.20 <br>
-                        Gandhidham- KUTCH-370201 <br>
-                        Contact Person: MR. KISHAN SINGH <br>
-                        MOB- 9924874841, 9377154841                                              
+                    <p>FLAT NO.-105, Vrindavan complex, Near B.M.C.B., SEC.-9A, PLOT NO.20 <br />
+                        Gandhidham- KUTCH-370201 <br />
+                        Contact Person: KISHAN SINGH <br />
+                        Ph- 9924874841, 9377154841                                              
                     </p>
                   </div>
               </div>
@@ -136,10 +136,10 @@
                 <div class="card blue-grey darken-1">
                   <div class="card-content white-text">
                     <span class="card-title">Pant Nagar</span>
-                    <p>MIG-495, Awas Vikas, opp.Himshikher property <br>
-                        Rudrapur, Udhamsingh Nagar-263153  (U.K.) <br>
-                        Contact Person: Trilok Singh <br>
-                        Mob. 9358865110, 9634153841, 05944-240025                        
+                    <p>MIG-495, Awas Vikas, opp.Himshikher property <br />
+                        Rudrapur, Udhamsingh Nagar-263153  (U.K.) <br />
+                        Contact Person: Trilok Singh <br />
+                        Ph- 9358865110, 9634153841, 05944-240025                        
                     </p>
                   </div>
                 </div>
@@ -151,9 +151,9 @@
                 <div class="card-content white-text">
                     <span class="card-title">Vapi</span>
                     <p>165/98, GIDC Vapi Opp. Way to Dadra Paper Mill,
-                        VAPI - 396195 (GUJRAT)
-                        Contact Person: MR.RAMESH <br>
-                        MOB. 9377926191                                              
+                        VAPI - 396195 (GUJRAT) <br>
+                        Contact Person: RAMESH <br />
+                        Ph- 9377926191                                              
                     </p>
                   </div>
               </div>
@@ -162,9 +162,10 @@
                 <div class="card blue-grey darken-1">
                   <div class="card-content white-text">
                     <span class="card-title">Pune</span>
-                    <p>7A, Vineet Residency, Sec-24, Plot N.90, Pradhi Karan <br>
-                        Nigdi, Pune-410044,  MR. SUBHASH <br>
-                        09371014573,9326653781,82                                               
+                    <p>7A, Vineet Residency, Sec-24, Plot N.90, Pradhi Karan <br />
+                        Nigdi, Pune-410044, <br> 
+                        Contact Person: SUBHASH <br />
+                        Ph- 09371014573,9326653781,82                                               
                     </p>
                   </div>
                 </div>
@@ -175,9 +176,9 @@
               <div class="card blue-grey darken-1">
                 <div class="card-content white-text">
                     <span class="card-title">Bhiwandi</span>
-                    <p>BGTA Compound, Anjur Phata, Bhiwandi <br>
-                        Contact Person: MR NARESH <br>
-                        TEL 02522-271993,9320253841                                                                    
+                    <p>BGTA Compound, Anjur Phata, Bhiwandi <br />
+                        Contact Person: NARESH <br />
+                        Ph- 02522-271993,9320253841                                                                    
                     </p>
                   </div>
               </div>
@@ -186,9 +187,9 @@
                 <div class="card blue-grey darken-1">
                   <div class="card-content white-text">
                     <span class="card-title">Delhi</span>
-                    <p>AG-468, Sanjay gandhi transport nagar <br>
-                        DELHI 110042, <br>
-                        PH.9311610041                                                                      
+                    <p>AG-468, Sanjay gandhi transport nagar <br />
+                        DELHI 110042, <br />
+                        Ph- 9311610041                                                                      
                     </p>
                   </div>
                 </div>
@@ -199,11 +200,11 @@
               <div class="card blue-grey darken-1">
                 <div class="card-content white-text">
                     <span class="card-title">Ankleshwar</span>
-                    <p>Plot No.432, Asian Paint Chowkdi, <br>
-                        Near New Deep Chemicals, GIDC <br>
-                        Ankleshwar- 393002, <br> 
-                        Contact Person: KAILASH JANGID <br>
-                        TEL-02646-321797, 220276, 09426740247 , 09376011451                                                                                          
+                    <p>Plot No.432, Asian Paint Chowkdi, <br />
+                        Near New Deep Chemicals, GIDC <br />
+                        Ankleshwar- 393002, <br /> 
+                        Contact Person: KAILASH JANGID <br />
+                        Ph- 02646-321797, 220276, 09426740247 , 09376011451                                                                                          
                     </p>
                   </div>
               </div>
@@ -212,10 +213,10 @@
                 <div class="card blue-grey darken-1">
                   <div class="card-content white-text">
                     <span class="card-title">Ahmedabad</span>
-                    <p>603, P.B.Paekh Tower <br>
-                        opp.Vanjay Bhawan,Kakankria, Ahmedabad-22 <br>
-                        Mr.Ramesh Sharma <br>
-                        Ph-09426328041, 09228801900, 079-25466923                                                                                            
+                    <p>603, P.B.Paekh Tower <br />
+                        opp.Vanjay Bhawan,Kakankria, Ahmedabad-22 <br />
+                        Cotact Person: Ramesh Sharma <br />
+                        Ph- 09426328041, 09228801900, 079-25466923                                                                                            
                     </p>
                   </div>
                 </div>
@@ -226,10 +227,10 @@
               <div class="card blue-grey darken-1">
                 <div class="card-content white-text">
                     <span class="card-title">Baroda</span>
-                    <p>46 Dhanlyxmi Complex,Harmi Road, <br> 
-                        Baroda [GUJ] <br>
-                        Contact Person: Dr.D.V.Sharma <br>
-                        Ph -09824569824,0265-2481131
+                    <p>46 Dhanlyxmi Complex,Harmi Road, <br /> 
+                        Baroda [GUJ] <br />
+                        Contact Person: Dr.D.V.Sharma <br />
+                        Ph- 09824569824,0265-2481131
                         9377281139                                                                                                                 
                     </p>
                   </div>
@@ -239,10 +240,10 @@
                 <div class="card blue-grey darken-1">
                   <div class="card-content white-text">
                     <span class="card-title">Jaipur</span>
-                    <p>B-237 E, VKIA ROAD NO. 5, NEAR MANGALA SARIYA, <br>
-                        JAIPUR - 302013 <br>
-                        Contact Person: Shriram Jangid <br>
-                        Mo. No. +918503009241                                                                                                                  
+                    <p>B-237 E, VKIA ROAD NO. 5, NEAR MANGALA SARIYA, <br />
+                        JAIPUR - 302013 <br />
+                        Contact Person: Shriram Jangid <br />
+                        ph- +918503009241                                                                                                                  
                     </p>
                   </div>
                 </div>
@@ -253,9 +254,9 @@
               <div class="card blue-grey darken-1">
                 <div class="card-content white-text">
                     <span class="card-title">Bangalore</span>
-                    <p>No.124,Kudregere main road Madanayakanahalli <br>
-                        Madavara post.near Harish Compound, Bangalore-23 <br>
-                        Contact Person: Satyabir Sharma <br>
+                    <p>No.124,Kudregere main road Madanayakanahalli <br />
+                        Madavara post.near Harish Compound, Bangalore-23 <br />
+                        Contact Person: Satyabir Sharma <br />
                         Ph- 09342743841,09379480136, 080-32432422                                                                                                                                      
                     </p>
                   </div>
@@ -265,9 +266,9 @@
                 <div class="card blue-grey darken-1">
                   <div class="card-content white-text">
                     <span class="card-title">Sikar</span>
-                    <p>Opp.Despencery no.2, Devipura Road, <br>
-                        Sikar [RAJ] <br>
-                        Contact Person: Prithviraj Jangid <br>
+                    <p>Opp.Despencery no.2, Devipura Road, <br />
+                        Sikar [RAJ] <br />
+                        Contact Person: Prithviraj Jangid <br />
                         Ph- 09352310041                                                                                                                                        
                     </p>
                   </div>
@@ -279,9 +280,9 @@
               <div class="card blue-grey darken-1">
                 <div class="card-content white-text">
                     <span class="card-title">Haridwar</span>
-                    <p>Bariar No.06 , Bhadrabad, <br>
-                        Haridwar [Uttrakhand] <br>
-                        Mo.09634153841                                                                                                                                                            
+                    <p>Bariar No.06 , Bhadrabad, <br />
+                        Haridwar [Uttrakhand] <br />
+                        Ph- 09634153841                                                                                                                                                            
                     </p>
                   </div>
               </div>
@@ -291,8 +292,8 @@
                   <div class="card-content white-text">
                     <span class="card-title">Jharkhand</span>
                     <p>Room no.16, Transport nagar, Dimna Chowk, Mngo 
-                        Jamsedpur-831018 [Jharkhand] <br>
-                        Contact Person: Shivkumar Agrawal <br>
+                        Jamsedpur-831018 [Jharkhand] <br />
+                        Contact Person: Shivkumar Agrawal <br />
                         Ph- 09204783995,09334643995,08407000105                                                                                                                                                             
                     </p>
                   </div>
@@ -304,10 +305,10 @@
               <div class="card blue-grey darken-1">
                 <div class="card-content white-text">
                     <span class="card-title">Bhiwadi</span>
-                    <p>Shree Ganesh Complex, 1st floor, Office No.2 <br>
-                        Near MLP High School, Maheshwari, <br>
-                        Distt. Rewari(R.J) <br>
-                        COntact Person: Vijay Vashist <br>
+                    <p>Shree Ganesh Complex, 1st floor, Office No.2 <br />
+                        Near MLP High School, Maheshwari, <br />
+                        Distt. Rewari(R.J) <br />
+                        COntact Person: Vijay Vashist <br />
                         Ph- 9813384646                                                                                                                                                                             
                     </p>
                   </div>
@@ -317,8 +318,8 @@
                 <div class="card blue-grey darken-1">
                   <div class="card-content white-text">
                     <span class="card-title">Baddi</span>
-                    <p>Near Sangam Hotel, <br>
-                        Sai Road, <br> 
+                    <p>Near Sangam Hotel, <br />
+                        Sai Road, <br /> 
                         Baddi(H.P)
                         Ph- 9882236683
                     </p>
