web site update

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
     />
   </head>
   <body>
-    <nav class="page-nav-bar teal darken-4" role="navigation"></nav>
+    <nav class="page-nav-bar white" role="navigation"></nav>
     <div class="section no-pad-bot" id="index-banner">
       <div class="container">
         <div>
@@ -43,37 +43,35 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="col s12 m4">
-          <h5>
-            Omkara Transport Private Limited is a Private incorporated on 18
-            April 2000.
-          </h5>
-          <div class="light flow-text">
-            Omkara Transport Private Limited's Annual General Meeting (AGM) was
-            last held on 30 September 2019. As per records from Ministry of
-            Corporate Affairs (MCA), its balance sheet was last filed on 31
-            March 2019.. Directors of Omkara Transport Private Limited are Om
-            Prakash Jangid and Gori Shankar Jangid.
-          </div>
+        <div class="col s12 m6">
+          <img src="./content/man.png" alt="" class="responsive-img" />
         </div>
-        <div class="col s12 m4">
-          <img
-            src="./content/man.png"
-            alt=""
-            class="responsive-img"
-            style="max-width: 300px"
-          />
-        </div>
-        <div class="col s12 m4">
-          <h5>
-            Omkara Transport Private Limited's Annual General Meeting (AGM) was
-            last held on 30 September 2019.
-          </h5>
-          <div class="light flow-text">
-            As per records from Ministry of Corporate Affairs (MCA), its balance
-            sheet was last filed on 31 March 2019.. Directors of Omkara
-            Transport Private Limited are Om Prakash Jangid and Gori Shankar
-            Jangid.
+        <div class="col s12 m6">
+          <h5>Introduction</h5>
+          <div class="light">
+            <p style="font-size: 18px; line-height: 25px">
+              We are very much pleased to introduce ourselves as one of the
+              leading IBA Approved vide Code DLO-1879 transporters in India,
+              having our Head Office at Delhi, Branch Offices and Associated
+              Offices in almost all the major cities and ports of India.
+              <br />
+              In list of our fleet, We have entire range of GOODS VEHICLES i.e.
+              trailers, trucks, LCVs and containerized vehicles. <br />
+              We are providing PARCEL Services from MUMBAI, BHIWANDI, VAPI and
+              SILVASSA to DELHI, GURGAON, BHIWARI, FARIDABAD, NOIDA and vice
+              versa in lowest transit time of 4 days. <br />
+              We are providing 48 hours committed fast delivery service for
+              above stations also. We are specialist in the transportation of
+              over dimension cargo and machinery. We are lifting the 20’ &amp;
+              40’ containers of import &amp; export from MUMBAI AND NAHVA SHEVA
+              PORT for various I.C.Ds &amp; C.F.Ss.(dry ports). <br />We have
+              trained staff and skilled labour to handle your consignments and
+              cargo at the very safest method. We trust in view of above facts
+              your good self will consider us &amp; give an opportunity to prove
+              ourselves. We will be highly obliged and grateful to you if you
+              will pass on any enquiry for road freight so that you will find
+              our rates as best and very competitive.
+            </p>
           </div>
         </div>
       </div>
