--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
     />
   </head>
   <body>
-    <nav class="page-nav-bar teal darken-4" role="navigation"></nav>
+    <nav class="page-nav-bar white" role="navigation"></nav>
     <div class="section no-pad-bot" id="index-banner">
       <div class="container">
         <div>
@@ -89,7 +89,33 @@
           style="height: 400px; width: 100%"
         ></iframe>
         <br /><br />
-        <br />
+
+        <div class="container">
+          <h5 class="center-align teal-text">Bank Details</h5>
+          <br />
+          <table>
+            <tr>
+              <td><b>Bank Name</b></td>
+              <td>Yes Bank Limited</td>
+            </tr>
+            <tr>
+              <td><b>Account Number</b></td>
+              <td>023184600000021</td>
+            </tr>
+            <tr>
+              <td><b>IFSC Code</b></td>
+              <td>YESB0000231</td>
+            </tr>
+            <tr>
+              <td><b>Branch Address</b></td>
+              <td>
+                D-14, Prashant Vihar, Near Santom Hospital, Rohini, New Delhi -
+                110085
+              </td>
+            </tr>
+          </table>
+        </div>
+        <br /><br />
       </div>
     </div>
 
