--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     />
   </head>
   <body>
-    <nav class="page-nav-bar teal darken-4" role="navigation"></nav>
+    <nav class="page-nav-bar white" role="navigation"></nav>
     <div class="" id="index-banner">
       <div class="parallax-container">
         <div class="parallax"><img src="./content/banner1.jpg" /></div>
