--- a/offices.html
+++ b/offices.html
@@ -27,7 +27,7 @@
     />
   </head>
   <body>
-    <nav class="page-nav-bar teal darken-4" role="navigation"></nav>
+    <nav class="page-nav-bar white" role="navigation"></nav>
     <div class="section no-pad-bot" id="index-banner">
       <div class="container">
         <div>
@@ -308,7 +308,7 @@
                     <p>Shree Ganesh Complex, 1st floor, Office No.2 <br />
                         Near MLP High School, Maheshwari, <br />
                         Distt. Rewari(R.J) <br />
-                        COntact Person: Vijay Vashist <br />
+                        Contact Person: Vijay Vashist <br />
                         Ph- 9813384646                                                                                                                                                                             
                     </p>
                   </div>
@@ -320,7 +320,7 @@
                     <span class="card-title">Baddi</span>
                     <p>Near Sangam Hotel, <br />
                         Sai Road, <br /> 
-                        Baddi(H.P)
+                        Baddi(H.P) <br>
                         Ph- 9882236683
                     </p>
                   </div>
