--- a/gallery.html
+++ b/gallery.html
@@ -27,7 +27,7 @@
     />
   </head>
   <body>
-    <nav class="page-nav-bar teal darken-4" role="navigation"></nav>
+    <nav class="page-nav-bar white" role="navigation"></nav>
     <div class="section no-pad-bot" id="index-banner">
       <div class="container">
         <div>
